asg/tests/fail/array/type_tuple_value_tuple_4x3x2_fail.leo
function main() {
    const b: [u8; (4, 3, 2)] = [0; (2, 3, 4)]; // initializer (incorrectly reversed order)
}